# fox-engine

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  main.cpp  pch.hpp
GLEW/lib/Debug/x64/: glew32d.exp  glew32sd.lib
SFML/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  SFML.sln  SFMLStaticTargets.cmake  cmake_install.cmake
SFML/src/SFML/: INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake
SFML/src/SFML/Audio/: INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake  sfml-audio.vcxproj  sfml-audio.vcxproj.filters
SFML/src/SFML/Main/: INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake  sfml-main.vcxproj  sfml-main.vcxproj.filters
SFML/src/SFML/System/: INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake  sfml-system.vcxproj  sfml-system.vcxproj.filters
SFML/src/SFML/Window/: INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake  sfml-window.vcxproj  sfml-window.vcxproj.filters
SFML/src/SFML/Window/Android/: WindowImplAndroid.cpp
img/: badbird.mtl  untitled.mtl
shaders/: frag.glsl  vert.glsl
src/: Clock.cpp  Clock.hpp  Component.hpp  ComponentManager.hpp  EntityIterator.cpp  EntityIterator.hpp  Game.cpp  Game.hpp  GameEntity.cpp  GameEntity.hpp  GameEntityManager.cpp  GameEntityManager.hpp  GraphicsComponent.cpp  GraphicsComponent.hpp  InputComponent.cpp  InputComponent.hpp  Scene.cpp  Scene.hpp  TransformComponent.cpp  TransformComponent.hpp  Window.cpp  Window.hpp  main.cpp
src/components/: ComponentPool.hpp  ComponentTypes.hpp  GLSpriteComponent.cpp  GLSpriteComponent.hpp  GraphicsComponent.cpp  GraphicsComponent.hpp  IndicesComponent.cpp  IndicesComponent.hpp  InputComponent.cpp  InputComponent.hpp  MVPTransformComponent.cpp  MVPTransformComponent.hpp  ModelComponent.cpp  ModelComponent.hpp  PhysicsComponent.cpp  PhysicsComponent.hpp  RectangleShapeComponent.cpp  RectangleShapeComponent.hpp  SpriteComponent.cpp  SpriteComponent.hpp  TransformComponent.cpp  TransformComponent.hpp  TriggerComponent.cpp  TriggerComponent.hpp  VerticesComponent.cpp  VerticesComponent.hpp  WorldTransformComponent.cpp  WorldTransformComponent.hpp
src/components/config/: ModelConfig.hpp  TextConfig.hpp
src/entities/: ConfiguredEntity.hpp  EntityFilter.hpp  EntityInstanceConfig.cpp  EntityInstanceConfig.hpp  EntityIterator.cpp  EntityIterator.hpp  GameEntity.cpp  GameEntity.hpp  GameEntityConfig.cpp  GameEntityConfig.hpp  GameEntityEnum.hpp  GameEntityLibrary.cpp  GameEntityLibrary.hpp
src/graphics/: Camera.cpp  Camera.hpp  MVPMatrix.hpp  ModelConfig.hpp  ModelData.hpp  Shader.cpp  Shader.hpp  Texture.cpp  Texture.hpp  TextureMapper.hpp  Vertex.hpp  Window.cpp  Window.hpp
src/scenes/: ExampleTestScene.cpp  ExampleTestScene.hpp  Scene.cpp  Scene.hpp  SceneConfig.cpp  SceneConfig.hpp  SceneEnum.hpp  SceneLibrary.cpp  SceneLibrary.hpp  SceneManager.cpp  SceneManager.hpp
src/systems/: EventRelay.cpp  EventRelay.hpp  EventTypes.hpp  GiantMainSystem.cpp  GiantMainSystem.hpp  GraphicsTransformSystem.cpp  GraphicsTransformSystem.hpp  InputProcessingSystem.cpp  InputProcessingSystem.hpp  MessageRelay.cpp  MessageRelay.hpp  MessageTypes.hpp  ProcessWindowEventsSystem.cpp  ProcessWindowEventsSystem.hpp  Recipient.cpp  Recipient.hpp  RenderSystem.cpp  RenderSystem.hpp  Subscriber.cpp  Subscriber.hpp  System.hpp  Systems.hpp  WindowEventSystem.cpp  WindowEventSystem.hpp
src/util/: FontMapper.hpp  Logger.hpp  Utils.hpp  stb.cpp
